--- a/node/jichukaifa/web/522/weibo/package.json
+++ b/node/jichukaifa/web/522/weibo/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.4.3",
-    "jade": "*"
+    "jade": "*",
+    "connect-mongo": ">= 0.1.7",
+    "mongodb": ">= 0.9.9"
   }
 }
