--- a/node/jichukaifa/web/522/weibo/package.json
+++ b/node/jichukaifa/web/522/weibo/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "3.4.3",
     "jade": "*",
-    "connect-mongo": ">= 0.1.7",
-    "mongodb": ">= 0.9.9"
+    "connect-mongodb": ">= 1.0.0",
+    "mongodb": ">= 0.9.9",
+	"connect": ">= 2.0.0"
   }
 }
